samples/_failures_safe/1761439507_56bbef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7c6ce72.c: In function ‘main’:
./samples/SAFE/__tmp_a7c6ce72.c:205:5: error: expected expression at end of input
  205 |     int token_count =
      |     ^~~
./samples/SAFE/__tmp_a7c6ce72.c:205:5: error: expected declaration or statement at end of input
